--- a/RedBox/Views/Shared/_Layout.cshtml
+++ b/RedBox/Views/Shared/_Layout.cshtml
@@ -3,51 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    <link rel="icon" href="/favicon.png" type="image/png">
+
+    @Styles.Render("~/css/vendor")
+    @Styles.Render("~/css/app")
 </head>
 <body>
-    <header class="navbar navbar-fixed-top">
-            <div class="navbar-header">
-            <div class="changer">
-                <div></div>
-                <ul>
-                    <li class="active"><a href="http://localhost:2016">Redbox</a></li>
-                    <li><a href="http://localhost:2016">Timesheet</a></li>
-                    <li><a href="http://www2.techromix.com:1006">Evaluation</a></li>
-                    <li><a href="http://blog.techromix.com">Blog</a></li>
-                    <li><a target="_blank" href="https://sites.google.com/a/techromix.com/internal-site/">Google Site <span class="fa fa-external-link"></span></a></li>
-                    <li><a target="_blank" href="https://sites.google.com/a/techromix.com/dev/">Dev Team <span class="fa fa-external-link"></span></a></li>
-                    <li><a target="_blank" href="https://sites.google.com/a/techromix.com/tmx-qa-team/home/">QA Team <span class="fa fa-external-link"></span></a></li>
-                </ul>
-            </div>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Redbox", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
-    </header>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+
+
+    @Scripts.Render("~/js/vendor")
+    @Scripts.Render("~/js/app")
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
